started organizing components. Ex put all home page section in home folder. Will continue with rest of components. Attempting to fix mobile background issue. As of now, the carousel gets very small on mobile. I am aware the mp4 probably won't play, so I will begin to use media queries to try to add an image that will become the background when screen is around 480px or less. Maybe more. Got rid of profile page. not necessary. I can have all of my components listed in app.js.

--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -18,3 +18,7 @@
   border-radius: 14px;
   padding: 8px; */
 }
+
+#responsive-navbar-nav {
+  text-align: center;
+}
